--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "lucide-react": "^0.542.0"
+    "lucide-react": "^0.542.0",
     "@google/genai": "^1.33.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
