--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.18.0",
     "@google/generative-ai": "^0.21.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
